crates/host-macros/tests/compile_fail/config_and_inline.rs
omnia_host_macros::runtime!({
    config: "omnia.toml",
    guests: [
        { id: "api", source: "api.wasm" },
    ],
});

fn main() {}
